# MongoDB-Poetry

./: MangoDB Notes.md  MongoDB-Poetry Notes.md  Poetry Notes.txt  README.md  pyproject.toml  secrets.yaml  test.py
data/: company_overview.csv  nasdaq_100.csv
github_data/: company_overview.csv  news_sentiment.csv
mongodb_demo/: main.py  mongo_script.sh
stock-info-demo-main/: README.md
stock-info-demo-main/atlas_csv/: cash_flow.csv  quarterly_earnings.csv  stock_weekly_data.csv
stock_info_parser/: alpha_api.py  github_pipeline.py  mongo_handler.py  nasdaq_fetcher.py  pipeline.py
